rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: music-sep-rest:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
